--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+:root {
+    height: 100%;
+  }
+  
+  body {
+    height: 100%;
+  }
+  
+  #root {
+    height: 100%;
+  }
